# SoPDF

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
docs/en/: API.md  RuntimeDependencyCompare.md
docs/zh/: API.md  RuntimeDependencyCompare.md
examples/01_open/: open_from_bytes.py  open_from_path.py  open_with_password.py
examples/02_render/: render_batch.py  render_batch_parallel.py  render_single_page.py  render_to_file.py
examples/03_extract_text/: get_plain_text.py  get_text_blocks.py  get_text_in_region.py
examples/04_search_text/: search_basic.py  search_case_sensitive.py  search_with_context.py
examples/05_split/: split_each.py  split_pages.py
examples/06_merge/: append_doc.py  merge_files.py
examples/07_save_compress/: save_basic.py  save_to_bytes.py  save_with_options.py
examples/08_rotate/: rotate_pages.py
examples/09_decrypt/: decrypt_and_save.py
examples/10_repair/: repair_corrupted.py
examples/11_metadata/: read_metadata.py  write_metadata.py
examples/12_outline/: outline_to_list.py  print_outline.py
sopdf/: __init__.py  _document.py  _exceptions.py  _merge.py  _metadata.py  _outline.py  _page.py  _rect.py  _render.py  _text.py  _utils.py
tests/: conftest.py  test_coverage_gaps.py  test_decrypt.py  test_document.py  test_exceptions.py  test_merge.py  test_metadata.py  test_outline.py  test_page.py  test_parallel.py  test_rect.py  test_render.py  test_repair.py  test_rotate.py  test_save.py  test_search.py  test_split.py  test_sync.py  test_text.py
tests/benchmark/: __init__.py  bench_render.py  bench_text.py  (+2 more)
(+2 files in other folders)
